--- a/pizza/static/css/detail.css
+++ b/pizza/static/css/detail.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
-
+@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
 #botao{
     background-color: black; 
     color: white; 
@@ -120,8 +120,8 @@ h1{
     justify-content: center;
     width: 100%;
     height: 100vh;
-    margin-top: 3%;
-    margin-bottom: 5%;
+    margin-top: 8%;
+    margin-bottom: 8%;
 }
 
 #dados-section{
