--- a/pizza/templates/detail.html
+++ b/pizza/templates/detail.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="{% static 'img/pizza.png' %}" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/detail.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <title>Pizza de {{ pizza.sabor }}</title>
 </head>
 <body>
@@ -40,7 +41,7 @@
         </div>
       </nav>
       
-      <div class="container-fluid" id="section">
+      <div class="container" id="section">
         <h1>Pizza de {{ pizza.sabor }}</h1>
         <img src="{{ pizza.imagem.url }}" class="img-fluid" alt="details.jpg">
         <div id="dados-section">
