--- a/pizza/templates/admin.html
+++ b/pizza/templates/admin.html
@@ -9,7 +9,7 @@
     <title>Pizzaria in Deliciis</title>
 </head>
 <body style="background-color: #EDEDED;">
- 
+
  <!-- HEADER -->
 <nav class="navbar navbar-expand-lg" id="nav" style="background-color: #FFBF00">
     <div class="container-fluid">
@@ -23,13 +23,12 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item d-flex align-items-center">
                     <i class="fa-solid fa-user fa-lg" style="color: white; margin-right: 10px;"></i>
-                    <a class="nav-link active" aria-current="page" href="#" style="color: white">Samuel Araújo</a>
+                    <a class="nav-link active" aria-current="page" href="#" style="color: white">{{user.nome}}</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-
 
       <!-- MAIN -->
       <div class="accordion" id="accordionPanelsStayOpenExample" style="margin-top: 30px; margin-bottom: 30px;">
@@ -106,97 +105,37 @@
             <div class="accordion-body" >
                 <button type="button" class="btn btn-primary btn-lg add-sabor" id="botao2">Criar sabor</button>
 
-                <div class="alert alert-warning alert-dismissible fade show" role="alert" id="alert-criar" style="display: none;">
-                  <strong>Digite o nome:</strong> 
-                  <div class="input-group input-group-sm mb-3">
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+               <form action="{% url 'criarPizza' %}" method="POST" id="criarPizza" enctype="multipart/form-data" style="margin-top: 15px; background-color: #CFE2FF; border-width: 20px; border-color:#CFE2FF; border-style:solid; display: none ">
+                <p style="color: red"> Todos os campos são obrigatórios! </p>
+                  {% csrf_token %}
+                  {{form.as_p}}
+                  <div style="margin-top: 15px">
+                    <input type="submit" value="Salvar">
+                    <input type="button" value="Cancelar" id="cancelarButton">
                   </div>
+               </form>
 
-                  <strong>Selecione uma imagem:</strong>
-                  <div class="input-group">
-                    <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-                  </div>
-
-                  <strong>Digite o valor:</strong> 
-                  <div class="input-group input-group-sm mb-3">
-                    <p>Tamanho pequeno: </p>
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-                  </div>
-                  <div class="input-group input-group-sm mb-3">
-                    <p>Tamanho médio: </p>
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-                  </div>
-                  <div class="input-group input-group-sm mb-3">
-                    <p>Tamanho grande: </p>
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-                  </div>
-        
-
-                  <button type="button" class="btn btn-primary" data-bs-dismiss="alert" aria-label="Close" style="border-width: 1px;">Adicionar</button>
-                  <button type="button" class="btn btn-primary" data-bs-dismiss="alert" aria-label="Close" style="border-width: 1px;">Cancelar</button>
-
-                </div>
-
-                <div class="alert alert-warning alert-dismissible fade show" role="alert" id="alert-excluir" style="display: none">
-                  <strong>Tem certeza</strong> que deseja excluir?
-                  <button type="button"  class="btn btn-primary" data-bs-dismiss="alert" aria-label="Close">Sim</button>
-                  <button type="button"  class="btn btn-primary" data-bs-dismiss="alert" aria-label="Close">Não</button>
-                </div>
-      
-                <div class="alert alert-warning alert-dismissible fade show" role="alert" id="alert-editar" style="display: none;">
-                  <strong>Digite o novo nome:</strong> 
-                  <div class="input-group input-group-sm mb-3">
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-                  </div>
-
-                  <strong>Selecione uma nova imagem:</strong>
-                  <div class="input-group">
-                    <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-                  </div>
-
-                  <strong>Digite um novo valor:</strong> 
-                  <div class="input-group input-group-sm mb-3">
-                    <p>Tamanho pequeno: </p>
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-                  </div>
-                  <div class="input-group input-group-sm mb-3">
-                    <p>Tamanho médio: </p>
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-                  </div>
-                  <div class="input-group input-group-sm mb-3">
-                    <p>Tamanho grande: </p>
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-                  </div>
-        
-
-                  <button type="button" class="btn btn-primary" data-bs-dismiss="alert" aria-label="Close" style="border-width: 1px;">Salvar</button>
-                  <button type="button" class="btn btn-primary" data-bs-dismiss="alert" aria-label="Close" style="border-width: 1px;">Cancelar</button>
-
-                </div>
+               <!-- <form action="editar" method="POST" id="editarPizza" style="margin-top: 15px; background-color: #E0CFFC; border-width: 20px; border-color:#CFE2FF; border-style:solid ">
+                  {% csrf_token %}
+                  {{form.as_table}}
+                  <input type="submit" value="Salvar">
+                  <input type="submit" value="Cancelar">
+               </form> -->
                 
                 <div class=".container" style="display: grid; gap: 10px;  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));">
-
+                  {% for pizza in pizzas %}
                   
                   <div class="card" style="width: 18rem; margin-top: 20px; margin-bottom: 20px; background-color: white; border-color: gray; border-width: 1px; border-radius: 5px;">
-                    <img src="istockphoto-1421607041-1024x1024.jpg" class="card-img-top" alt="...">
+                    <img src="{{ pizza.imagem.url }}" class="card-img-top" alt="...">
                     <div class="card-body" style="align-items: center; justify-content: center; display: flex; flex-direction: column;">
-                      <h5 class="card-title" style="margin-left: 7px; margin-right: 7px;">Quatro queijos</h5>
-                      <h6 class="card-text"> <a href="#" class="btn btn-primary editar-sabor" style="background-color: green; border: none;">Editar sabor</a> </h6>
-                      <h6 class="card-text"> <a href="#" class="btn btn-primary excluir-sabor" style="background-color: red; border: none;">Excluir sabor</a> </h6>
-
+                      <h5 class="card-title" style="margin-left: 7px; margin-right: 7px;">{{pizza.sabor}}</h5>
+                      <h5 class="card-title" style="margin-left: 7px; margin-right: 7px;">{{pizza.tamanho}}</h5>
+                      <h6 class="card-text"> <a href="{% url 'editarPizza' pizza.id %}" class="btn btn-primary editar-sabor" style="background-color: green; border: none;">Editar sabor</a> </h6>
+                      <h6 class="card-text deletar"> <a class="btn btn-primary excluir-sabor" href="{% url 'deletarPizza' pizza.id %}" id="deletar" style="background-color: red; border: none;">Excluir sabor</a> </h6>
+                     
                     </div>
                   </div>
-
-                  <div class="card" style="width: 18rem; margin-top: 20px; margin-bottom: 20px; background-color: white; border-color: gray; border-width: 1px; border-radius: 5px;">
-                    <img src="{%static 'img/istockphoto-1421607041-1024x1024.jpg' %}" class="card-img-top" alt="...">
-                    <div class="card-body" style="align-items: center; justify-content: center; display: flex; flex-direction: column;">
-                      <h5 class="card-title" style="margin-left: 7px; margin-right: 7px;">Quatro queijos</h5>
-                      <h6 class="card-text"> <a href="#" class="btn btn-primary editar-sabor" style="background-color: green; border: none;">Editar sabor</a> </h6>
-                      <h6 class="card-text"> <a href="#" class="btn btn-primary excluir-sabor" style="background-color: red; border: none;">Excluir sabor</a> </h6>
-
-                    </div>
-                  </div>
-        
+                  {% endfor %}
                 </div>
                 
             </div>
