--- a/pagamento/templates/pagamentopix.html
+++ b/pagamento/templates/pagamentopix.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{% static 'img/pizza.png' %}" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/finalizarpedido.css' %}">
     <title>Finalizar Pedido</title>
@@ -38,9 +39,6 @@
           </div>
         </div>
       </nav>
-
-      <img src="{{ qr_code_url }}" alt="QR Code para pagamento com Pix">
-      
       <div class="container-fluid" id="section">
         <h1>Deseja Finalizar Pedido ?</h1>
         <div id="itens">
@@ -56,15 +54,15 @@
           <div  id="item2">
             <ul class="list-group">
               <li class="list-group-item active" aria-current="true">Pagamento</li>
-              <li class="list-group-item">Tipo de Pagamento: Físico</li>
+              <li class="list-group-item">Tipo de Pagamento: Pix</li>
               <li class="list-group-item">Valor total: {{ carrinho.valorTotal }} R$</li>
-              <li class="list-group-item">Pizzas: {{ carrinho.quantidadeTotal }}</li>
+              <li class="list-group-item">Realizar pagamento: <a href="{{ linkpix }}" target="_blank">{{ linkpix }}</a></li>
             </ul>
             <a class="btn btn-primary" href="{% url 'abrirCarrinho' user.id %}" role="button"><i class="fa-regular fa-pen-to-square" style="color: #ffffff;"></i>   Editar Pedido</a>
           </div>
         </div>
         <div style="margin-top: 3%;">
-          <a href="{% url 'fazerpedido' %}" class="btn btn-primary btn-lg"><i class="fa-solid fa-money-bill" style="color: #ffffff;"></i>   Finalizar o Pedido</a>
+          <a href="{% url 'fazerpedidopix' %}" class="btn btn-primary btn-lg"><i class="fa-solid fa-money-bill" style="color: #ffffff;"></i>   Finalizar o Pedido</a>
         </div>
       </div>
 
