--- a/pizza/static/css/admin.css
+++ b/pizza/static/css/admin.css
@@ -48,8 +48,23 @@ box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.47);
     font-size: 2rem;
 }
 
+#header{
+    margin-top: 3%;
+    margin-bottom: 2%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.6rem;
+}
+
 @media screen and (max-width: 910px)
 {
+    #header{
+        font-size: 1rem;
+    }
+
     #titulo-tag{
         font-size: 1rem;
     }
