--- a/pizza/templates/editarPizza.html
+++ b/pizza/templates/editarPizza.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{% static 'img/pizza.png' %}" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/admin.css' %}">
-    <title>Pizzaria in Deliciis</title>
+    <title>Editar Pizza</title>
 </head>
 <body style="background-color: #EDEDED;">
 
