--- a/pizza/templates/listapedidos.html
+++ b/pizza/templates/listapedidos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{% static 'img/pizza.png' %}" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/listapedidos.css' %}">
     <title>Lista de Pedidos</title>
@@ -53,6 +54,7 @@
                       <li class="list-group-item">Número: {{ pedido.endereco.numero }}</li>
                       <li  style="background-color: black;"  class="list-group-item active" aria-current="true">Pagamento  <i class="fa-solid fa-money-bill" style="color: #ffffff;"></i></li>
                       <li class="list-group-item">Tipo de Pagamento: {{ pedido.tipo_pagamento }}</li>
+                      <li class="list-group-item">Valor total: {{ pedido.valorTotal }}</li>
                       {% if pedido.status == "Pendente" %}
                         <li class="list-group-item">Status:  {{ pedido.status }}</li>
                       {% endif %}
@@ -62,9 +64,9 @@
                       {% if pedido.status == "Cancelado" %}
                         <li class="list-group-item" style="color: #ff0000;">Status:  {{ pedido.status }}</li>
                       {% endif %}
-                      <li  style="background-color: black;"  class="list-group-item active">Sabor/Quantidade  <i class="fa-solid fa-list" style="color: #ffffff;"></i></li>
+                      <li  style="background-color: black;"  class="list-group-item active">Sabor/Quantidade/Tamanho  <i class="fa-solid fa-list" style="color: #ffffff;"></i></li>
                       {% for item in pedido.itens.all %}
-                          <li class="list-group-item">{{ item.pizza.sabor }} x {{ item.quantidade }}</li>
+                          <li class="list-group-item">{{ item.pizza.sabor }} x {{ item.quantidade }} | {{ item.pizza.tamanho }}</li>
                       {% endfor %}
                       {% if pedido.status == "Pendente" %}
                         <li class="list-group-item">
