--- a/usuario/templates/editarEndereco.html
+++ b/usuario/templates/editarEndereco.html
@@ -13,7 +13,7 @@
     <!-- HEADER -->
 <nav class="navbar navbar-expand-lg" id="nav" style="background-color: #FFBF00">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="color: white">
+        <a class="navbar-brand" href="{% url 'usernavpage' %}" style="color: white">
             <img src="{%static 'img/Pizzaria(1).png' %}" alt="" width="120" height="40" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
