--- a/usuario/templates/userpage.html
+++ b/usuario/templates/userpage.html
@@ -42,7 +42,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" style="color: white">{{user.nome}}</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'usernavpage' %}" style="color: white">{{user.nome}}</a>
           </li>
 
         </ul>
@@ -57,7 +57,7 @@
     </div>
 
     <div class="container" style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 50vw ">
-      <a href="" ><button type="button" class="btn btn-primary btn-lg opcao" style="margin-bottom: 20px; margin-top: 20px"><i class="fa-solid fa-pen icone"></i>Editar dados</button></a>
+      <a href="{% url 'editarperfil' %}" ><button type="button" class="btn btn-primary btn-lg opcao" style="margin-bottom: 20px; margin-top: 20px"><i class="fa-solid fa-pen icone"></i>Editar perfil</button></a>
       <a href="{% url 'endereco' %}" ><button type="button" class="btn btn-primary btn-lg opcao" style="margin-bottom: 20px"><i class="fa-solid fa-street-view icone"></i>Editar endereço</button></a>
       <a href="{% url 'meuspedidos' %}" ><button type="button" class="btn btn-primary btn-lg opcao" style="margin-bottom: 20px"><i class="fa-solid fa-pizza-slice icone"></i>Ver pedidos</button></a>
       <a href="{% url 'logout' %}" ><button type="button" class="btn btn-primary btn-lg opcao" id="sair" style="margin-bottom: 20px"><i class="fa-solid fa-right-from-bracket icone"></i>Sair</button></a>
